package products;

public interface Product {

    void doSomething();

}
